# smtlib-rs

./: .gitignore  .release-plz.toml  CHANGELOG.md  Cargo.toml  Justfile  README.md  rustfmt.toml
.github/workflows/: ci.yml
build-util/: Cargo.toml
build-util/src/: lib.rs  spec.rs  spec.toml
examples/: queens.rs
generate/: Cargo.toml
generate/src/: main.rs  spec.toml
lowlevel/: Cargo.toml  README.md  build.rs
lowlevel/examples/: 19-quantifiers.smt2  bubble_sort.smt2  loop_unrolling.smt2  loop_unrolling_bitvec.smt2  queens.smt2  simple.smt2
lowlevel/src/: ast.rs  ast_ext.rs  cvc5.rs  lexicon.rs  lib.rs  main.rs  parse.rs  storage.rs  tests.rs
lowlevel/src/backend/: cvc5.rs  cvc5_binary.rs  mod.rs  z3.rs  z3_binary.rs  z3_static.rs
lowlevel/src/snapshots/: smtlib_lowlevel__tests__bubble_sort.snap  smtlib_lowlevel__tests__escaped_string.snap  smtlib_lowlevel__tests__z3__echo_test-2.snap  smtlib_lowlevel__tests__z3__echo_test.snap  smtlib_lowlevel__tests__z3__negative_numbers-2.snap  smtlib_lowlevel__tests__z3__negative_numbers-3.snap  smtlib_lowlevel__tests__z3__negative_numbers-4.snap  smtlib_lowlevel__tests__z3__negative_numbers.snap
smtlib/: Cargo.toml  README.md  build.rs
smtlib/examples/: queens.rs  queens_bv.rs  queens_bv2.rs  simplify.rs  socrates.rs
smtlib/src/: async_solver.rs  funs.rs  lib.rs  logics.rs  solver.rs  sorts.rs  terms.rs  tests.rs  tokio_solver.rs
smtlib/src/logics/: AUFLIA.smt2  QF_AUFLIA.smt2  QF_AX.smt2  QF_BV.smt2  QF_IDL.smt2  QF_NIA.smt2  QF_RDL.smt2  QF_UF.smt2  QF_UFLRA.smt2  UFNIA.smt2  mod.rs
smtlib/src/theories/: ArraysEx.smt2  Core.smt2  FixedSizeBitVectors.smt2  FloatingPoint.smt2  Ints.smt2  Reals.smt2  Reals_Ints.smt2  UnicodeStrings.smt2  arrays_ex.rs  core.rs  fixed_size_bit_vectors.rs  ints.rs  mod.rs  reals.rs
spec/logics/: AUFLIRA.smt2  AUFNIRA.smt2  LIA.smt2  LRA.smt2  QF_ABV.smt2  QF_AUFBV.smt2  QF_LIA.smt2  QF_LRA.smt2  QF_NRA.smt2  QF_UFBV.smt2  QF_UFIDL.smt2  QF_UFLIA.smt2  QF_UFNRA.smt2  UFLRA.smt2
src/: ast.rs  lib.rs  terms.rs
xtask/: Cargo.toml
xtask/src/: ast.rs  logics.rs  main.rs  spec.toml
