[workspace]
members = ["smtlib", "lowlevel", "xtask"]
resolver = "2"

[workspace.package]
version = "0.2.0"

[workspace.dependencies]
itertools = "0.12.0"
miette = { version = "5.5.0" }
serde = { version = "1.0.152", features = ["derive"] }
smtlib = { path = "./smtlib" }
smtlib-lowlevel = { path = "./lowlevel", version = "0.2.0" }
thiserror = "1.0.38"
insta = { version = "1.23.0", features = ["ron"] }

[workspace.metadata.release]
shared-version = true
pre-release-hook = ["just", "release-hook"]
