[workspace]
members = ["smtlib", "lowlevel", "xtask"]
resolver = "2"

[workspace.package]
version = "0.3.0"
rust-version = "1.82"

[workspace.dependencies]
itertools = "0.14.0"
miette = { version = "7.0.0" }
serde = { version = "1.0.152", features = ["derive"] }
smtlib-lowlevel = { path = "./lowlevel", version = "0.3.0" }
thiserror = "2.0"
insta = { version = "1.40.0", features = ["ron"] }
tokio = { version = "1.37.0", features = ["io-util", "process"] }

[workspace.metadata.release]
shared-version = true
pre-release-hook = ["just", "release-hook"]
