[package]
name = "smtlib-build-util"
version = "0.1.0"
edition = "2021"
description = "The build utils for building the smtlib family of crates"
homepage = "https://github.com/oeb25/smtlib-rs"
license = "MIT/Apache-2.0"
authors = ["Oliver Bøving <oliver@bvng.dk>"]
repository = "https://github.com/oeb25/smtlib-rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
heck = "0.4.0"
indexmap = { version = "1.9.2", features = ["serde"] }
itertools = "0.10.5"
miette = { version = "5.5.0", features = ["fancy"] }
serde = { version = "1.0.152", features = ["derive"] }
toml = { version = "0.5.10", features = ["indexmap"] }
