[package]
name = "smtlib-lowlevel"
version = "0.1.4"
edition = "2021"
description = "A low-level API for interacting with SMT solvers"
homepage = "https://github.com/oeb25/smtlib-rs/tree/main/lowlevel"
license = "MIT/Apache-2.0"
authors = ["Oliver Bøving <oliver@bvng.dk>"]
readme = "README.md"
repository = "https://github.com/oeb25/smtlib-rs"
documentation = "https://docs.rs/smtlib-lowlevel"

[features]
default = []
z3 = []
z3-static = ["dep:z3-sys"]
cvc5 = []
serde = ["dep:serde"]
async = ["dep:async-trait"]

[dependencies]
async-trait = { version = "0.1.61", optional = true }
itertools = "0.10.5"
logos = "0.12.1"
miette = { version = "5.5.0" }
serde = { version = "1.0.152", features = ["derive"], optional = true }
thiserror = "1.0.38"
z3-sys = { version = "0.7.1", features = ["static-link-z3"], optional = true }

[dev-dependencies]
insta = { version = "1.23.0", features = ["ron"] }
smtlib-lowlevel = { path = ".", features = ["serde"] }

[build-dependencies]
smtlib-build-util = { version = "0.1.0", path = "../build-util" }

[package.metadata.docs.rs]
all-features = true
