[package]
name = "smtlib-lowlevel"
version.workspace = true
edition = "2021"
description = "A low-level API for interacting with SMT solvers"
homepage = "https://github.com/oeb25/smtlib-rs/tree/main/lowlevel"
license = "MIT/Apache-2.0"
authors = ["Oliver Bøving <oliver@bvng.dk>"]
readme = "README.md"
repository = "https://github.com/oeb25/smtlib-rs"
documentation = "https://docs.rs/smtlib-lowlevel"

[features]
default = []
z3-static = ["dep:z3-sys"]
serde = ["dep:serde"]

[dependencies]
itertools.workspace = true
logos = "0.13.0"
miette.workspace = true
serde = { workspace = true, optional = true }
thiserror.workspace = true
z3-sys = { version = "0.8.1", features = ["static-link-z3"], optional = true }

[dev-dependencies]
insta.workspace = true
smtlib-lowlevel = { path = ".", features = ["serde"] }

[build-dependencies]
smtlib-build-util = { version = "0.1.8", path = "../build-util" }

[package.metadata.docs.rs]
features = ["serde"]
