[package]
name = "smtlib"
version.workspace = true
edition = "2021"
description = "A high-level API for interacting with SMT solvers"
homepage = "https://github.com/oeb25/smtlib-rs/tree/main/smtlib"
license = "MIT/Apache-2.0"
authors = ["Oliver Bøving <oliver@bvng.dk>"]
readme = "README.md"
repository = "https://github.com/oeb25/smtlib-rs"
documentation = "https://docs.rs/smtlib"

[features]
default = []
serde = ["dep:serde", "smtlib-lowlevel/serde"]
z3 = ["smtlib-lowlevel/z3"]
z3-static = ["smtlib-lowlevel/z3-static"]
cvc5 = ["smtlib-lowlevel/cvc5"]
const-bit-vec = []
async = ["smtlib-lowlevel/async"]

[dependencies]
itertools.workspace = true
miette.workspace = true
smtlib-lowlevel = { path = "../lowlevel", version = "0.1.8" }
serde = { workspace = true, optional = true }
thiserror.workspace = true

[dev-dependencies]
futures = "0.3.29"
insta.workspace = true
miette = { workspace = true, features = ["fancy"] }
smtlib = { path = ".", features = ["serde", "z3", "cvc5", "async"] }

[build-dependencies]
smtlib-build-util = { version = "0.1.8", path = "../build-util" }
smtlib-lowlevel = { version = "0.1.8", path = "../lowlevel" }

[package.metadata.docs.rs]
features = ["serde", "z3", "cvc5", "const-bit-vec", "async"]
