[package]
name = "xtask"
edition = "2021"
version.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
color-eyre = "0.6.2"
itertools.workspace = true
prettyplease = "0.2.15"
proc-macro2 = "1.0.71"
quote = "1.0.33"
syn = "2.0.43"
xflags = "0.3.2"
xshell = "0.2.5"
